[package]
name = "json-stream-js"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-stream-parser = "0.1.5"
napi = { version = "3.0.0-beta.12", features = ["napi4", "serde-json"] }
napi-derive = "3.0.0-beta.12"
serde_json = "1"

[build-dependencies]
napi-build = "2"

